test/driver/unexpected_extension.yl
// RUN: (compiler ./source.cpp || true) 2>&1 | filecheck %s
// CHECK: error: unexpected source file extension
